Fix align

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
   /* margin: 0 auto; */
   display: flex;
   justify-content: center;
+  align-content: center;
 }
 
 .right-el{
